Add Java security policy